--- a/src/my_serial/CMakeLists.txt
+++ b/src/my_serial/CMakeLists.txt
@@ -49,10 +49,10 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-  FILES
+# add_message_files(
+  # FILES
   #Message2.msg
-)
+# )
 
 # catkin_python_setup()
 
@@ -74,10 +74,10 @@ add_message_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-  DEPENDENCIES
-  std_msgs  # Or other packages containing msgs
-)
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs  # Or other packages containing msgs
+# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -111,7 +111,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES galaxy_camera
-CATKIN_DEPENDS  message_generation message_runtime roscpp rospy std_msgs
+CATKIN_DEPENDS   message_runtime roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
